--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Shopping List</string>
     <string name="sign_in">Connexion</string>
     <string name="sign_up">Inscription</string>
+    <string name="add_list">Création de liste</string>
+    <string name="add_product">Création de produit</string>
     <string name="logout">Déconnexion</string>
 
     <string name="hint_last_name">Nom</string>
@@ -9,11 +11,13 @@
     <string name="hint_email">Saisissez votre email</string>
     <string name="hint_password">Saisissez votre mot de passe</string>
     <string name="hint_confirm_password">Confirmez le mot de passe</string>
+    <string name="hint_listname">Nom de la Liste</string>
 
     <string name="button_validate">Valider</string>
 
     <string name="success_login">Vous êtes connecté</string>
-
+    <string name="add">Ajouter</string>
+    <string name="remove">Supprimer</string>
     <string name="error_email">Veuillez saisir une adresse mail</string>
     <string name="error_password">Veuillez saisir un mot de passe</string>
 </resources>
